# genpdf-rs

./: .gitignore  Cargo.toml
examples/: math.rs
src/: elements.rs  error.rs  fonts.rs  lib.rs  math.rs  render.rs  style.rs  syntax_highlighting.rs  wrap.rs
src/elements/: codeblock.rs  images.rs  math.rs
