# SPDX-FileCopyrightText: 2020-2021 Robin Krahl <robin.krahl@ireas.org>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "genpdf"
version = "0.2.0"
authors = ["Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
description = "User-friendly PDF generator written in pure Rust"
homepage = "https://sr.ht/~ireas/genpdf-rs"
repository = "https://git.sr.ht/~ireas/genpdf-rs"
documentation = "https://docs.rs/genpdf"
keywords = ["pdf", "text", "layout"]
categories = ["text-processing"]
license = "Apache-2.0 OR MIT"
exclude = [".builds/*"]
readme = "README.md"

[[example]]
name = "images"
required-features = ["images"]

[[example]]
name = "math"
required-features = ["math"]

[dependencies]
lopdf = "0.27"
rusttype = "0.9"
rex = { git = "https://github.com/Twometer/ReX", rev = "d0991f44a66dee84f5280277e9251f26777871cb", optional = true }
font = { git = "https://github.com/pdf-rs/font", features = [
    "woff",
], optional = true }

[dependencies.image]
version = "0.24.4"
default-features = false
optional = true

[dependencies.hyphenation]
version = "0.8"
optional = true

[dependencies.printpdf]
git = "https://github.com/dnlmlr/printpdf"
rev = "72c00957902dbc27bc71dcc743d9d1377e526685"
default-features = false
features = [
    "font_subsetting",
]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"]

[dev-dependencies.float-cmp]
version = "0.8"
default-features = false
features = ["std"]

[dev-dependencies.hyphenation]
version = "0.8"
features = ["embed_en-us"]

[features]
default = []
images = ["image", "printpdf/embedded_images"]
math = ["dep:rex", "dep:font"]

[package.metadata.docs.rs]
all-features = true
